--- a/src/components/baseTable/tableHeader/BalanceCell.css
+++ b/src/components/baseTable/tableHeader/BalanceCell.css
@@ -1,4 +1,4 @@
 .balanceCell {
-    font-size: 14px;
-    width: 55px;
+    font-size: 15px;
+    width: 51px;
 }
