--- a/src/components/baseTable/tableHeader/HourCell.css
+++ b/src/components/baseTable/tableHeader/HourCell.css
@@ -1,4 +1,4 @@
 .hourCell{
-    font-size: 14px;
+    font-size: 15px;
     width: 100px;
 }
