--- a/src/components/baseTable/tableHeader/ShiftCountCell.css
+++ b/src/components/baseTable/tableHeader/ShiftCountCell.css
@@ -1,4 +1,4 @@
 .shiftCountCell {
-    font-size: 14px;
-    width: 60px;
+    font-size: 15px;
+    width: 70px;
 }
