--- a/src/components/cell/NameCell.css
+++ b/src/components/cell/NameCell.css
@@ -1,5 +1,6 @@
 .nameCell{
-    font-size:15px;
-    text-align:left;
-    width:200px;
+    padding: 0px;
+    width: 200px;
+    font-size: 15px;
+    text-align: left;
 }
