--- a/src/components/cell/ShiftCell.css
+++ b/src/components/cell/ShiftCell.css
@@ -1,5 +1,7 @@
 .shiftCell{
-    font-size: 17px;
+    margin:0px;
+	  padding: 0px;
+	  font-size:17px;
 }
 /*******************************************************************************************************
  *                                                                                                     *
